added endpoints to receive transactions from user by id
